Fixing z-index on Mobile menu

--- a/css/main-menu.css
+++ b/css/main-menu.css
@@ -53,6 +53,8 @@ body {
     padding:0;
     text-align:center;
     display:none;
+    position:fixed;
+    z-index: 9999;
     justify-content: space-between;
     align-items:center;
 }
@@ -202,9 +204,10 @@ body {
     background-color:black;
     height:100vh;
     width:100%;
-    position:absolute;
+    position:fixed;
     top:0;
     display:none;
+    z-index:10;
 }
 
 .menu-visible{
